methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:3: error: not found: value c
    ligne(c:Color);
          ^MethodsPicture:33: error: not found: value setColorBrosse
  setColorBrosse(); faireV();
  ^