methods.picture.MethodsPicture.scala.code
override def run() {
  for (compteur <-1 to 3) {
    ligne(c:Color);
  }
}


def ligne(c:Color) {
  for (compteur <-1 to 3) {
    carre(c:Color); 
    for (compteur <- 1 to 6) {
      forward();
    }
  }
  for (compteur <-1 to 15) {
    backward();
  }
  left();
  for (compteur <- 1 to 5) {
    forward();
  }
  right();
}

def carre(c:Color) {
  for (compteur <- 1 to 4) {
    faireV(c:Color); forward; left(); 
  }
  backward();
}

def faireV(c:Color) {
  setColorBrosse(); faireV();
}


def faireV() {
    forward(); brushDown(); brushUp(); left(); forward(); right(); forward(); brushDown(); brushUp(); forward(); right(); forward(); brushDown(); brushUp(); left();
}